[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/Consolas.tres" type="DynamicFont" id=1]
[ext_resource path="res://content/gui/overlays/other/FridgeOverlay.gd" type="Script" id=2]

[node name="FridgeOverlay" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 768.0
margin_bottom = 1408.0
mouse_filter = 2
color = Color( 0.257813, 0.257813, 0.257813, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Background"]
margin_right = 768.0
margin_bottom = 1365.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Background/Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 748.0
margin_bottom = 1345.0
custom_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="Background/Margin/VBox"]
margin_top = 54.0
margin_right = 728.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = ExtResource( 1 )
text = "Fridge"
align = 1

[node name="Slot0Button" type="Button" parent="Background/Margin/VBox"]
margin_top = 182.0
margin_right = 728.0
margin_bottom = 438.0
rect_min_size = Vector2( 0, 256 )
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "<Empty>"

[node name="Slot1Button" type="Button" parent="Background/Margin/VBox"]
margin_top = 502.0
margin_right = 728.0
margin_bottom = 758.0
rect_min_size = Vector2( 0, 256 )
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "<Empty>"

[node name="Slot2Button" type="Button" parent="Background/Margin/VBox"]
margin_top = 822.0
margin_right = 728.0
margin_bottom = 1078.0
rect_min_size = Vector2( 0, 256 )
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "<Empty>"

[node name="CloseButton" type="Button" parent="Background/Margin/VBox"]
margin_top = 1142.0
margin_right = 728.0
margin_bottom = 1270.0
rect_min_size = Vector2( 0, 128 )
custom_fonts/font = ExtResource( 1 )
text = "Close Fridge"

[connection signal="pressed" from="Background/Margin/VBox/Slot0Button" to="." method="_on_Slot0Button_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/Slot1Button" to="." method="_on_Slot1Button_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/Slot2Button" to="." method="_on_Slot2Button_pressed"]
[connection signal="pressed" from="Background/Margin/VBox/CloseButton" to="." method="_on_CloseButton_pressed"]
